--- a/noflex.css
+++ b/noflex.css
@@ -71,7 +71,15 @@ body {
 }
 
 h1 {
+  width: 20ch;
   text-align: center;
+  position: absolute;
+  top: 70%;
+  z-index: 9999;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .commands {
